--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   auto_route: ^5.0.0
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.4
+  url_launcher: ^6.1.5
+  material_design_icons_flutter: ^5.0.6996
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
