--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sizer: ^2.0.15
-  flutter_sound: ^9.2.13
   auto_route: ^5.0.0
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.4
   url_launcher: ^6.1.5
   material_design_icons_flutter: ^5.0.6996
   clipboard: ^0.1.3
+  just_audio: ^0.9.28
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svgs/
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/songs_files/
+    - assets/songs_notes_charts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
